# usf-model-api

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Pipfile  README.md  build.sh  run.sh  setup.cfg  setup.py
apps/: Dockerfile
models/sales_forecasting/: data.py  model.py  params.yaml  preprocessing.py  run.py  train.py
service/: Dockerfile  api.py  app.py  build.sh
service/routers/: sales_forecasting.py
service/routers/sales_forecasting/: router.py  test_router.py
src/usf_model_api/: utils.py
src/usf_model_api/models/: base.py
src/usf_model_api/serving/: base.py  client.py  utils.py  webapp.py
tests/usf_model_api/: test_utils_.py
tests/usf_model_api/serving/: test_utils.py
