[metadata]
name = usf-model-api
description = A take-home project
author = Dennis Michalopoulos
author-email = dennis.p.m@gmail.com
license = mit
url = https://github.com/pyscaffold/pyscaffold/
#project-urls =
#    Documentation = https://pyscaffold.org/
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
classifiers =
    #Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
install_requires =
  fastapi
  fastapi[standard]
  uvicorn
  joblib
  httpx
  pydantic
  numpy
  pandas
  scikit-learn

python_requires = >=3.10.13

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-mock
    black==22.3.0
    pylint==3.0.0a5
dev =
    matplotlib
    ipykernel>=5.4.3
    jupyterlab

[options.entry_points]

[test]
extras = True

[tool:pytest]
addopts =
    --cov src --cov-report xml --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

#[flake8]
# Some sane defaults for the code style checker flake8
#exclude =
#    .tox
#    build
#    dist
#    .eggs
#    docs/conf.py
