[metadata]
name = usf-model-api
description = A take-home project
author = Dennis Michalopoulos
author-email = dennis.p.m@gmail.com
license = mit
url = https://github.com/pyscaffold/pyscaffold/
#project-urls =
#    Documentation = https://pyscaffold.org/
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
classifiers =
    #Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
install_requires =
  fastapi==0.115.12
  fastapi[standard]
  uvicorn==0.34.0
  httpx==0.28.1
  pydantic>=2.0.0
  numpy>=2.2.0
  pandas>=2.2.0
  scikit-learn>=1.6.0,<1.7
  cloudpickle==3.1.1

python_requires = >=3.10.13

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools==78.1.0
    pytest
    pytest-cov
    pytest-mock
    black==22.3.0
    pylint==3.0.0a5
dev =
    matplotlib
    ipykernel>=5.4.3
    jupyterlab

[options.entry_points]

[test]
extras = True

[tool:pytest]
addopts =
    --cov src --cov-report xml --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
